Add character picker dialog, triggerable by onscreen or hardware SYM key (partially from irssiconnectbot 1435a6f0718ca3c673d80ceff1857ce3394932ad)

--- a/res/layout/act_console.xml
+++ b/res/layout/act_console.xml
@@ -156,6 +156,16 @@
 			android:src="@+drawable/button_esc"
 			/>
 
+		<ImageView
+			android:id="@+id/button_sym"
+			android:paddingRight="15dip"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentBottom="true"
+			android:layout_toRightOf="@+id/button_esc"		
+			android:src="@+drawable/button_sym"
+			/>
+
 	</RelativeLayout>
 
 </RelativeLayout>
