Add optional support for remapping hardware keys on Xperia (mini) pro: - language key (unmapped) maps to CTRL - ALT + S (unmapped) maps to pipe - ALT + Z (unmapped) maps to backslash

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -151,6 +151,13 @@
 			android:defaultValue="false"
 			/>
 
+		<CheckBoxPreference
+			android:key="xperiaProFix"
+			android:title="@string/pref_xperiapro_title"
+			android:summary="@string/pref_xperiapro_summary"
+			android:defaultValue="false"
+			/>
+
 	</PreferenceCategory>
 
 </PreferenceScreen>
