Update link to Apache License in wiz_eula

--- a/res/layout/wiz_eula.xml
+++ b/res/layout/wiz_eula.xml
@@ -60,7 +60,7 @@
 			android:layout_height="wrap_content"
 			android:paddingTop="10dip"
 			android:autoLink="web"
-			android:text="You can view the full text at http://www.gnu.org/licenses/gpl-3.0.txt"
+			android:text="You can view the full text at http://www.apache.org/licenses/LICENSE-2.0"
 			android:textSize="14sp"
 			android:textColor="#bebebe"
 			/>
