--- a/res/layout/act_console.xml
+++ b/res/layout/act_console.xml
@@ -132,7 +132,7 @@
 			android:paddingRight="15dip"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_toLeftOf="@+id/button_keyboard"
+			android:layout_toRightOf="@+id/button_sym"
 			android:layout_alignParentBottom="true"
 			android:src="@+drawable/button_input"
 			/>
