--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -99,7 +99,7 @@
 			android:summary="@string/pref_camera_summary"
 			android:entries="@array/list_camera"
 			android:entryValues="@array/list_camera_values"
-			android:defaultValue="Ctrl+A then Space"
+			android:defaultValue="Screen Capture"
 			/>
 
 		<CheckBoxPreference
