Import android-file-dialog library (BSD-licensed) with some fixes. Move file selection to a separate library (FileChooser). Add menu option to select a File Dialog application.

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -141,4 +141,15 @@
 		<item>backspace</item>
 	</string-array>
 
+	<string-array name="file_dialog" translatable="false">
+		<item>@string/pref_file_dialog_builtin</item>
+		<item>OI File Manager</item>
+		<item>AndExplorer</item>
+	</string-array>
+
+	<string-array name="file_dialog_values" translatable="false">
+		<item>built-in</item>
+		<item>OI</item>
+		<item>AE</item>
+	</string-array>
 </resources>
