--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -203,6 +203,7 @@
 			android:title="@string/pref_screen_capture_folder"
 			android:summary="@string/pref_screen_capture_folder_summary"
 			android:inputType="text"
+			android:singleLine="true"
 			/>
 
 		<CheckBoxPreference
