--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -257,4 +257,15 @@
 			android:defaultValue="true"
 			/>
 	</PreferenceCategory>
+
+	<PreferenceCategory
+		android:title="@string/pref_debug_category">
+
+		<CheckBoxPreference
+			android:key="debug_keycodes"
+			android:title="@string/pref_debug_keycodes"
+			android:summary="@string/pref_debug_keycodes_summary"
+			android:defaultValue="false"
+			/>
+	</PreferenceCategory>
 </PreferenceScreen>
