Modify long press menu to show fullscreen mode and change font size Create change font size dialog Move fullScreen functionality to separate function Add "Hide Action Bar" preference for Android 3.0+

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -66,6 +66,7 @@
 	</PreferenceCategory>
 
 	<PreferenceCategory
+		android:key="category_ui"
 		android:title="@string/pref_ui_category">
 
 		<ListPreference
@@ -81,6 +82,13 @@
 			android:key="fullscreen"
 			android:title="@string/pref_fullscreen_title"
 			android:summary="@string/pref_fullscreen_summary"
+			android:defaultValue="false"
+			/>
+
+		<CheckBoxPreference
+			android:key="hide_actionbar"
+			android:title="@string/pref_hide_actionbar_title"
+			android:summary="@string/pref_hide_actionbar_summary"
 			android:defaultValue="false"
 			/>
 
