--- a/res/layout/act_generatepubkey.xml
+++ b/res/layout/act_generatepubkey.xml
@@ -121,6 +121,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:password="true"
+				android:inputType="textPassword"
 				android:singleLine="true"
 				android:layout_weight="1" />
 		</TableRow>
@@ -151,6 +152,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:password="true"
+				android:inputType="textPassword"
 				android:singleLine="true"
 				android:layout_weight="1" />
 		</TableRow>
