--- a/res/layout/dia_changepassword.xml
+++ b/res/layout/dia_changepassword.xml
@@ -40,6 +40,7 @@
 			android:layout_height="wrap_content"
 			android:singleLine="true"
 			android:password="true"
+			android:inputType="textPassword"
 			/>
 	</TableRow>
 
@@ -58,6 +59,7 @@
 			android:layout_height="wrap_content"
 			android:singleLine="true"
 			android:password="true"
+			android:inputType="textPassword"
 			/>
 	</TableRow>
 
@@ -94,6 +96,7 @@
 			android:layout_height="wrap_content"
 			android:singleLine="true"
 			android:password="true"
+			android:inputType="textPassword"
 			/>
 	</TableRow>
 </TableLayout>
