Add customization for Samsung Captivate Glide (SGH-i927)

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -154,11 +154,13 @@
 	</string-array>
 
 	<string-array name="list_custom_keymap" translatable="false">
+		<item>Samsung Captivate Glide (SGH-i927)</item>
 		<item>Sony Ericsson Xperia (mini) pro</item>
 		<item>@string/pref_custom_keymap_disabled</item>
 	</string-array>
 
 	<string-array name="list_custom_keymap_values" translatable="false">
+		<item >sgh_i927</item>
 		<item>se_xppro</item>
 		<item>none</item>
 	</string-array>
