Deprecate android:password and android:numeric

--- a/res/layout/dia_password.xml
+++ b/res/layout/dia_password.xml
@@ -30,7 +30,7 @@
 		android:layout_width="250dip"
 		android:singleLine="true"
 		android:layout_height="wrap_content"
-		android:password="true"
+		android:inputType="textPassword"
 		android:hint="Password"
 		/>
 
