--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -105,9 +105,36 @@
 			android:key="camera"
 			android:title="@string/pref_camera_title"
 			android:summary="@string/pref_camera_summary"
-			android:entries="@array/list_camera"
-			android:entryValues="@array/list_camera_values"
+			android:entries="@array/list_hwbutton"
+			android:entryValues="@array/list_hwbutton_values"
 			android:defaultValue="Screen Capture"
+			/>
+
+		<ListPreference
+			android:key="volup"
+			android:title="@string/pref_volup_title"
+			android:summary="@string/pref_volup_summary"
+			android:entries="@array/list_hwbutton"
+			android:entryValues="@array/list_hwbutton_values"
+			android:defaultValue="CTRL"
+			/>
+
+		<ListPreference
+			android:key="voldn"
+			android:title="@string/pref_voldn_title"
+			android:summary="@string/pref_voldn_summary"
+			android:entries="@array/list_hwbutton"
+			android:entryValues="@array/list_hwbutton_values"
+			android:defaultValue="Tab"
+			/>
+
+		<ListPreference
+			android:key="search"
+			android:title="@string/pref_search_title"
+			android:summary="@string/pref_search_summary"
+			android:entries="@array/list_hwbutton"
+			android:entryValues="@array/list_hwbutton_values"
+			android:defaultValue="Esc"
 			/>
 
 		<CheckBoxPreference
