--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -17,7 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 	<style name="NoTitle" parent="android:Theme.Holo">
 		<item name="android:windowContentOverlay">@null</item>
 		<item name="android:windowActionBarOverlay">true</item>
