--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -161,6 +161,7 @@
 		<item>@string/pref_custom_keymap_disabled</item>
 		<item>@string/pref_custom_keymal_full</item>
 		<item>Samsung Captivate Glide (SGH-i927)</item>
+		<item>Samsung Captivate Glide (SGH-i927) ICS</item>
 		<item>Sony Ericsson Xperia (mini) pro</item>
 	</string-array>
 
@@ -168,6 +169,7 @@
 		<item>none</item>
 		<item>full</item>
 		<item>sgh_i927</item>
+		<item>sgh_i927_ics</item>
 		<item>se_xppro</item>
 	</string-array>
 </resources>
