--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -160,7 +160,7 @@
 	<string-array name="list_custom_keymap" translatable="false">
 		<item>@string/pref_custom_keymap_disabled</item>
 		<item>@string/pref_custom_keymap_full</item>
-		<item>ASUS Transformer Keyboard Dock</item>
+		<item>ASUS Transformer Pad Series Mobile Dock</item>
 		<item>Samsung Captivate Glide (SGH-i927)</item>
 		<item>Samsung Captivate Glide (SGH-i927) ICS</item>
 		<item>Sony Ericsson Xperia (mini) pro</item>
