Applied the patch for http proxy. From https://code.google.com/p/connectbot/issues/detail?id=610 By: Bjarni R. Einarsson <bre@klaki.net>

--- a/res/xml/host_prefs.xml
+++ b/res/xml/host_prefs.xml
@@ -72,6 +72,13 @@
 		android:title="@string/hostpref_compression_title"
 		android:summary="@string/hostpref_compression_summary"
 		/>
+
+	<EditTextPreference
+		android:key="httpproxy"
+		android:title="@string/hostpref_httpproxy_title"
+		android:summary="@string/hostpref_httpproxy_summary"
+		android:inputType="textUri"
+		/>
 		
 	<CheckBoxPreference
 		android:key="wantsession"
